# blue_pill_rust

./: Cargo.toml  README.md  openocd.gdb
src/: main.rs
