[package]
name = "blue_pill"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f103xx = { git = "https://github.com/japaric/stm32f103xx" }
stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal" }
cortex-m = "0.6"
cortex-m-semihosting = "0.*"
cortex-m-rt = { version = "0.6.8"}
panic-semihosting = "0.5.2"
panic-halt = "0.2.0"